Added Animation Behavior (#169)
* Adding Animation Behavior

* Removing Duplicate items

* Fix

* Update XamarinCommunityToolkit/Behaviors/Animations/AnimationTypes/FadeAnimation.shared.cs

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Update XamarinCommunityToolkit/Behaviors/Animations/AnimationBehaviour.shared.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Microsoft.Toolkit.Xamarin.Forms namespace rename. (#167)

* Huge rename of namepsace.

* Update azure-pipelines.yml

* NuGet rename

* Merge fix

Co-authored-by: Gerald Versluis <gerald@verslu.is>
Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Adding Animation Behavior

* Removing Duplicate items

* Fix

* Update XamarinCommunityToolkit/Behaviors/Animations/AnimationTypes/FadeAnimation.shared.cs

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Update XamarinCommunityToolkit/Behaviors/Animations/AnimationBehaviour.shared.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Applying PR feedbacks

* Remove EasingType

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>
Co-authored-by: Almir Vuk <almir.vuk@outlook.com>
Co-authored-by: Gerald Versluis <gerald@verslu.is>

--- a/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
+++ b/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
@@ -23,11 +23,7 @@
     <RepositoryUrl>https://github.com/xamarin/XamarinCommunityToolkit</RepositoryUrl>
     <PackageReleaseNotes>
       
-      
-      
       <!-- See if we can host these on MS docs? -->
-    
-    
     
     </PackageReleaseNotes>
     <DefineConstants>$(DefineConstants);</DefineConstants>
@@ -77,6 +73,8 @@
     <Folder Include="Extensions\" />
     <Folder Include="Effects\" />
     <Folder Include="Controls\" />
+    <Folder Include="Behaviors\Animations\" />
+    <Folder Include="Behaviors\Animations\AnimationTypes\" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
