working masked behaviors + examples

--- a/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
+++ b/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
@@ -67,7 +67,6 @@
     <Compile Include="**/*.shared.cs" />
     <Compile Include="**/*.shared.*.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
-    <Folder Include="Behaviors\" />
     <Folder Include="Converters\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Extensions\" />
@@ -111,5 +110,8 @@
     <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
       <Compile Include="**\*.tizen.cs" />
       <Compile Include="**\*.tizen.*.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Include="Behaviors\MaskedBehavior.cs" />
     </ItemGroup>
 </Project>
