--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -27,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Views\" />
-    <Folder Include="Pages\Behaviors\" />
     <Folder Include="Pages\Converters\" />
     <Folder Include="Pages\Base\" />
     <Folder Include="ViewModels\Views\" />
@@ -41,5 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Pages\Behaviors\MaskedBehaviorPage.xaml.cs">
+      <DependentUpon>MaskedBehaviorPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
