--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Octokit" Version="0.48.0" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.0.1.698" />
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Views\" />
+    <Folder Include="Pages\Behaviors\" />
     <Folder Include="Pages\Converters\" />
     <Folder Include="Pages\Base\" />
     <Folder Include="ViewModels\Views\" />
@@ -40,10 +41,5 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Pages\Behaviors\MaskedBehaviorPage.xaml.cs">
-      <DependentUpon>MaskedBehaviorPage.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
 </Project>
