Moving all strings to a Resource file

--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -23,6 +23,10 @@
     <EmbeddedResource Update="Views\BehaviorsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Resx\AppResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -38,8 +42,14 @@
     <Folder Include="Pages\TestCases\" />
     <Folder Include="ViewModels\TestCases\" />
     <Folder Include="ViewModels\Extensions\" />
+    <Folder Include="Resx\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resx\AppResources.Designer.cs">
+      <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
