Added hardcoded text to resource

--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Update="Resx\AppResources.Designer.cs">
       <DependentUpon>AppResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
   </ItemGroup>
 </Project>
