--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -27,11 +27,9 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Views\" />
-    <Folder Include="Pages\Behaviors\" />
     <Folder Include="Pages\Converters\" />
     <Folder Include="Pages\Base\" />
     <Folder Include="ViewModels\Views\" />
-    <Folder Include="ViewModels\Behaviors\" />
     <Folder Include="ViewModels\Converters\" />
     <Folder Include="ViewModels\Base\" />
     <Folder Include="Pages\Extensions\" />
@@ -41,5 +39,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Pages\Behaviors\MatchBehaviorPage.xaml.cs">
+      <DependentUpon>MatchBehaviorPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
