add confirm password behavior

--- a/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
+++ b/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="**/*.shared.cs" />
     <Compile Include="**/*.shared.*.cs" />
+    <Compile Include="Behaviors\ConfirmPasswordBehavior.cs" />
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <Folder Include="Behaviors\" />
     <Folder Include="Converters\" />
