--- a/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
+++ b/XamarinCommunityToolkit/Microsoft.Toolkit.Xamarin.Forms.csproj
@@ -38,12 +38,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
     <!-- Manage TargetFrameworks for development (Debug Mode) -->
-    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40;net461</TargetFrameworks>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Release' ">
     <!-- Manage TargetFrameworks for distribution (Release Mode) -->
-    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;Xamarin.TVOS10;Xamarin.WatchOS10;tizen40;net461</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Release' And '$(OS)' == 'Windows_NT' ">
     <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
@@ -110,5 +110,22 @@
     <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
       <Compile Include="**\*.tizen.cs" />
       <Compile Include="**\*.tizen.*.cs" />
+    </ItemGroup>
+    <ItemGroup Condition=" $(TargetFramework.StartsWith('net461')) ">
+      <Compile Include="**\*.gtk.cs" />
+      <Compile Include="**\*.gtk.*.cs" />
+      <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+      <Reference Include="gtk-sharp, Version=2.12.0.0">
+        <HintPath>../libs/gtk-sharp.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
+      <Reference Include="glib-sharp, Version=2.12.0.0">
+        <HintPath>../libs/glib-sharp.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
+      <Reference Include="gdk-sharp, Version=2.12.0.0">
+        <HintPath>../libs/gdk-sharp.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
     </ItemGroup>
 </Project>
