--- a/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Microsoft.Toolkit.Xamarin.Forms.Sample.csproj
@@ -34,6 +34,7 @@
     <Folder Include="Pages\Converters\" />
     <Folder Include="Pages\Base\" />
     <Folder Include="ViewModels\Views\" />
+    <Folder Include="ViewModels\Behaviors\" />
     <Folder Include="ViewModels\Converters\" />
     <Folder Include="ViewModels\Base\" />
     <Folder Include="Pages\Extensions\" />
