--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -70,6 +70,7 @@
     <Folder Include="Extensions\" />
     <Folder Include="Effects\" />
     <Folder Include="Views\" />
+    <Folder Include="Views\SideMenuView\" />
     <Folder Include="Behaviors\Animations\" />
     <Folder Include="Behaviors\Animations\AnimationTypes\" />
   </ItemGroup>
