--- a/XamarinCommunityToolkitSample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
+++ b/XamarinCommunityToolkitSample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
@@ -104,7 +104,7 @@
       <Project>{81AADE72-D666-4AB0-83D9-8FE366E0755E}</Project>
       <Name>Xamarin.CommunityToolkit.Sample</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj">
+    <ProjectReference Include="..\XamarinCommunityToolkit\Xamarin.CommunityToolkit.csproj">
       <Project>{B0DCDF81-953D-47DA-A7D4-0565339BF07C}</Project>
       <Name>Xamarin.CommunityToolkit</Name>
     </ProjectReference>
