--- a/.github/workflows/dotnet-format-pr.yml
+++ b/.github/workflows/dotnet-format-pr.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: ${{ github.head_ref }}
 
       - name: Run dotnet format
         id: format
@@ -32,4 +32,4 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.event.pull_request.head.ref }} 
+          branch: ${{ github.head_ref }} 
