--- a/XamarinCommunityToolkitSample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
+++ b/XamarinCommunityToolkitSample.Android/Xamarin.CommunityToolkit.Sample.Android.csproj
@@ -104,8 +104,8 @@
       <Project>{81AADE72-D666-4AB0-83D9-8FE366E0755E}</Project>
       <Name>Xamarin.CommunityToolkit.Sample</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XamarinCommunityToolkit\Microsoft.Toolkit.Xamarin.Forms.csproj">
-      <Project>{B0DCDF81-953D-47DA-A7D4-0565339BF07C}</Project>
+    <ProjectReference Include="..\XamarinCommunityToolkit\Xamarin.CommunityToolkit.csproj">
+      <Project>{b0dcdf81-953d-47da-a7d4-0565339bf07c}</Project>
       <Name>Xamarin.CommunityToolkit</Name>
     </ProjectReference>
   </ItemGroup>
