Added CameraFragment layout

--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -78,25 +78,38 @@
             <Name>Windows Mobile Extensions for the UWP</Name>
           </SDKReference>
         -->
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
-      <Compile Include="**\*.android.cs" />
-      <Compile Include="**\*.android.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
-      <Compile Include="**\*.ios.cs" />
-      <Compile Include="**\*.ios.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.TVOS')) ">
-      <Compile Include="**\*.tvos.cs" />
-      <Compile Include="**\*.tvos.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.WatchOS')) ">
-      <Compile Include="**\*.watchos.cs" />
-      <Compile Include="**\*.watchos.*.cs" />
-    </ItemGroup>
-    <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
-      <Compile Include="**\*.tizen.cs" />
-      <Compile Include="**\*.tizen.*.cs" />
-    </ItemGroup>
+  </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
+    <Compile Include="**\*.android.cs" />
+    <Compile Include="**\*.android.*.cs" />
+    
+    <!--Resources-->
+    <None Include="Platforms\Android\Resources\Layout\**\*" />
+    <None Remove="Platforms\Android\Resources\Layout\CameraFragment.axml" />
+    <AndroidResource Include="Platforms\Android\Resources\Layout\CameraFragment.axml" />
+    <Compile Remove="AppCompat\Resource.cs" />
+  </ItemGroup>
+
+ <!--<PropertyGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
+    <AndroidResgenClass>Resource</AndroidResgenClass>
+    <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
+    <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
+  </PropertyGroup>-->
+  
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
+    <Compile Include="**\*.ios.cs" />
+    <Compile Include="**\*.ios.*.cs" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.TVOS')) ">
+    <Compile Include="**\*.tvos.cs" />
+    <Compile Include="**\*.tvos.*.cs" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.WatchOS')) ">
+    <Compile Include="**\*.watchos.cs" />
+    <Compile Include="**\*.watchos.*.cs" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('tizen')) ">
+    <Compile Include="**\*.tizen.cs" />
+    <Compile Include="**\*.tizen.*.cs" />
+  </ItemGroup>
 </Project>
