--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -99,4 +99,12 @@
       <Compile Include="**\*.tizen.cs" />
       <Compile Include="**\*.tizen.*.cs" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Core\" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Update="Core\CameraMediaSource.shared.cs">
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
 </Project>
