--- a/XamarinCommunityToolkitSample.iOS/Info.plist
+++ b/XamarinCommunityToolkitSample.iOS/Info.plist
@@ -38,5 +38,9 @@
 	<string>This app would like to access the camera</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app would like to access the microphone to record movies</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app would like to save files to your gallery</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app would like to access your gallery</string>
 </dict>
 </plist>
