--- a/XamarinCommunityToolkitSample.iOS/Info.plist
+++ b/XamarinCommunityToolkitSample.iOS/Info.plist
@@ -34,5 +34,13 @@
     <string>XamarinCommunityToolkitSample</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>NSCameraUsageDescription</key>
+	<string>This app would like to access the camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app would like to access the microphone to record movies</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app would like to save files to your gallery</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app would like to access your gallery</string>
 </dict>
 </plist>
