--- a/XamarinCommunityToolkitSample/Xamarin.CommunityToolkit.Sample.csproj
+++ b/XamarinCommunityToolkitSample/Xamarin.CommunityToolkit.Sample.csproj
@@ -19,6 +19,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AppResources.es.resx</DependentUpon>
     </Compile>
+    <Compile Remove="Resx\ExpanderPage.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
