Are we safe from nulls? ¯\_(ツ)_/¯

--- a/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
+++ b/XamarinCommunityToolkit/Xamarin.CommunityToolkit.csproj
@@ -32,6 +32,7 @@
     <DebugType>portable</DebugType>
     <Configurations>Debug;Release</Configurations>
     <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
     <!-- Manage TargetFrameworks for development (Debug Mode) -->
